ci(netlify): 添加Netlify构建和开发配置
添加构建命令、发布目录和开发服务器配置，以支持Next.js应用在Netlify上的部署和开发

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,12 @@
+[build]
+  publish = ".next"
+  command = "pnpm run build"
+
+[dev]
+  command = "pnpm start"
+  port = 8888
+  targetPort = 3000
+  autoLaunch = true
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
