--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
+    "styled-jsx": "^5.1.6",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
